backend added to the repo

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.37.0",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
